--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,8 @@
 !*/Config/**
 !*/Plugins/**
 */Plugins/Developer/RiderLink
+**/Plugins/*/Binaries
+**/Intermediate/Build
 
 # Only allow .uasset and .umap files from /Content dir.
 # They're tracked by git-lfs, don't forget to track other
